--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,23 @@
     <p>Hello there, I'm an alt-text experiment.</p>
     <button id="changeColor">change bg color</button>
     <button id="altButton">alt text?</button>
-    <div id="altList"></div>
-    <script src="popup.js"></script>
+    <div id="altList">
+      <!-- <div>
+        <p class="title">nouns:</p>
+        <p id="nounsBox"></p>
+      </div>
+      <div>
+        <p class="title">verbs:</p>
+        <p id="verbsBox"></p>
+      </div>
+      <div>
+        <p class="title">adjs:</p>
+        <p id="adjsBox"></p>
+      </div> -->
+    </div>
+    <script src="./js/compromise.min.js"></script>
+    <script src="./js/compromise-adj.min.js"></script>
+    <script src="./helpers.js"></script>
+    <script src="./popup.js"></script>
   </body>
 </html>
