add haiku script (needs debugging)

--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,9 @@
   <head>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="button.css" />
+    <script src="lib/tracery.js"></script>
+    <script src="lib/compromise.min.js"></script>
+    <script src="haiku.js"></script>
   </head>
   <body>
     <p>Hello there, I'm an alt-text experiment.</p>
