--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,7 @@
     <p>Hello there, I'm an alt-text experiment.</p>
     <button id="changeColor">change bg color</button>
     <button id="altButton">alt text?</button>
+    <div id="altHaiku"></div>
     <div id="altList"></div>
     <script src="popup.js"></script>
   </body>
