set up raw on styling branch

--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="header">
-      <h1 id="title">haiku(alt text)</h1>
+      <h1 id="title">Today, I saw</h1>
       <p id="intro">
         A chrome extenstion that transforms alt text on a webpage to haikus.
         Blah blah blah.
@@ -22,8 +22,9 @@
     <div class="main">
       <div id="altList"></div>
       <div class="buttons">
-        <button id="generateButton">Haiku</button>
         <button id="altButton">Alt Text</button>
+        <button id="rawButton">Raw</button>
+        <button id="generateButton">Haiku</button>
       </div>
     </div>
     <script src="./js/gsap.min.js"></script>
