modify haiku output

--- a/popup.html
+++ b/popup.html
@@ -15,8 +15,7 @@
     <div class="header">
       <h1 id="title">Today, I saw</h1>
       <p id="intro">
-        A chrome extenstion that transforms alt text on a webpage to haikus.
-        Blah blah blah.
+        A chrome extenstion that looks for alt text of images on the internet.
       </p>
       <p id="intro">made by Anna Garbier & Lan Zhang</p>
     </div>
